@@ -2,6 +2,10 @@
 # Copyright 2000-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
 # $Id$
 
+  10 Nov 2003; Nicholas Jones <carpaski@gentoo.org> md5check.py: Checks all
+	digests and SRC_URIs for filenames and associated MD5s. Reports collisions
+	between versions/packages, missing, and extra lines in digests.
+
 *portage-2.0.49-r17/18 (10 Nov 2003): Fixes
 
   10 Nov 2003; Nicholas Jones <carpaski@gentoo.org> *: Changed portage to
